Update zine download links in index.html

--- a/index.html
+++ b/index.html
@@ -15,9 +15,7 @@
         <section class="zines">
             <h2>Download My Zines</h2>
             <ul>
-                <li><a href="zines/zine1.pdf" download>Zine 1</a></li>
-                <li><a href="zines/zine2.pdf" download>Zine 2</a></li>
-                <li><a href="zines/zine3.pdf" download>Zine 3</a></li>
+                <li><a href="zines/They're Not the Problem.pdf" download>They're Not the Problem</a></li>
             </ul>
         </section>
     </main>
