--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 </head>
 <body>
     <header>
-        <h1>My Zine Collection</h1>
+        <h1>AnPlural</h1>
     </header>
 
     <main>
         <section class="zines">
-            <h2>Download My Zines</h2>
+            <h2>Zines</h2>
             <ul>
                 <li><a href="zines/They're Not the Problem.pdf" download>They're Not the Problem</a></li>
             </ul>
