--- a/index.html
+++ b/index.html
@@ -9,13 +9,14 @@
 <body>
     <header>
         <h1>AnPlural</h1>
-        <hr>a repository for anarchist stuff</hr>
+        <p>a repository for anarchist stuff</p>
+        <hr>
     </header>
 
     <main>
         <section class="zines">
             <h2>Zines</h2>
-            <hr>all formated for printing</hr>
+            <p>all formated for printing</p>
             <ul>
                 <li><a href="zines/They're Not the Problem.pdf" download>They're Not the Problem</a></li>
             </ul>
