Add poster gallery section to index.html
Added a section for propaganda posters with images.

--- a/index.html
+++ b/index.html
@@ -22,5 +22,17 @@
             </ul>
         </section>
     </main>
+    <section class="posters">
+    <h2>Images</h2>
+    <p>propaganda posters and other images, I didn't make them all</p>
+    <div class="poster-gallery">
+        <a href="images/yourringcameraisaniceagent.png" download>
+            <img src="images/yourringcameraisaniceagent.png" alt="Your Ring Camera is an ICE Agent">
+        </a>
+        <a href="images/leviathan.png" download>
+            <img src="images/leviathan.png" alt="Destroy the Panopticon, Beware the Eyes of Leviathan">
+        </a>
+    </div>
+</section>
 </body>
 </html>
