--- a/index.html
+++ b/index.html
@@ -29,9 +29,11 @@
         <a href="images/yourringcameraisaniceagent.png" download>
             <img src="images/yourringcameraisaniceagent.png" alt="Your Ring Camera is an ICE Agent">
         </a>
+        <p>I didn't make this one, but it's good</p>
         <a href="images/leviathan.png" download>
             <img src="images/leviathan.png" alt="Destroy the Panopticon, Beware the Eyes of Leviathan">
         </a>
+        <p>I didn't make this one either, but I reversed the colors and added a QR code to a LinkTree with anti-Flock links</p>
     </div>
 </section>
 </body>
