Fix HTML structure for poster gallery links

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
     <div class="poster-gallery">
         <a href="images/yourringcameraisaniceagent.png" download>
             <img src="images/yourringcameraisaniceagent.png" alt="Your Ring Camera is an ICE Agent">
-        </a>
-        <a href="images/leviathan.png" download>
+        </a><!--
+        --><a href="images/leviathan.png" download>
             <img src="images/leviathan.png" alt="Destroy the Panopticon, Beware the Eyes of Leviathan">
         </a>
     </div>
