Fix typo in index.html header section

--- a/patches/index.html
+++ b/patches/index.html
@@ -11,6 +11,7 @@
         <h1>AnPlural Shop</h1>
         <p>patches I made and am willing to sell</p>
         <hr>
+        <p>work dammit</p>p>
     </header>
   
 </body>
