Add link to 'The Maga Party' PDF in index.html

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             <p>all formated for printing</p>
             <ul>
                 <li><a href="zines/They're Not the Problem.pdf" download>They're Not the Problem</a></li>
+                <li><a href="zines/maganazinm.pdf" download>The Maga Party, the Nazi Party, and the National Myth</a></li>
             </ul>
         </section>
     </main>
