Update message in index.html header

--- a/patches/index.html
+++ b/patches/index.html
@@ -11,7 +11,7 @@
         <h1>AnPlural Shop</h1>
         <p>patches I made and am willing to sell</p>
         <hr>
-        <p>work dammit</p>p>
+        <p>if you found this page, congrats! it's not ready!</p>
     </header>
   
 </body>
