--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <h1>AnPlural</h1>
-        <p>a repository for anarchist stuff <a href="/anplural/patches/" style="color:black; text-decoration:none;">patches</a> </p>
+        <p>a repository for anarchist stuff <a href="/anplural/patches/" style="color:black; text-decoration:none;">patches</a> ; <a href="/anplural/daoism/" style="color:black; text-decoration:none;">daoism</a></p>
         <hr>
     </header>
 
