--- a/daoism/dao0.html
+++ b/daoism/dao0.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AnPlural - Medidations - 0</title>
+    <title>AnPlural - Dao De Jing - 0</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
