--- a/daoism/index.html
+++ b/daoism/index.html
@@ -12,6 +12,9 @@
         <p>just stuff about my readings of daoist textx and some poems and stuff</p>
         <hr>
         <p>if you found this page, congrats! it's not ready!</p>
+        <p>Dao De Jing</p>
+        <pre>     - <a href="/dao0.html/">Prologue</a></pre>
+        <pre>     - <a href="/dao1.html/">Chapter 1</a></pre>
     </header>
   
 </body>
