Add navigation links to dao0.html

--- a/daoism/dao0.html
+++ b/daoism/dao0.html
@@ -11,6 +11,8 @@
         <h1>Prologue</h1>
         <hr>
         <p>Let me preface this by saying I don't know Chinese, I am not offering translations. My understanding is based on what I've read, finding ways to understand what is being read. I do not claim to be an authority and will likely get things wrong. I consider myself a student of the Dao - I strive to better understand what it means to flow. I am no sage (Shengren), my way (Dao Fa) is not the way. Everything comes through my perspective and understanding, affected by my beliefs and history - I'm a pantheist with a history of Christianity (of which I am apostate) and theological study. I also hold that human nature (Xing) is ultimately "self serving" - that is, we naturally act when we see some benefit on some level, whether conscious or unconscious. I am as well an anarchist, which is part of what drew me to Daoism, particularly Bao Jingyan, considered a proto-anarchist - his work "Neither Lord Nor Subject" introduced me to the idea that anarchism and daoism may have much in common. These things will affect my interpretations, but I have to be careful not to let these form my interpretations, only help me conceptualize them. I don't want to force Daoism into my beliefs or force my beliefs into Daoism, I want to come to understand Daoism as it is - and this understanding is simply alongside my beliefs.</p>
+        <hr>
+        <p><a href="/index.html/">table of contents</a> | <a href="/dao1.html/">next</a></p>
     </header>
   
 </body>
