--- a/daoism/index.html
+++ b/daoism/index.html
@@ -13,8 +13,8 @@
         <hr>
         <p>if you found this page, congrats! it's not ready!</p>
         <p>Dao De Jing</p>
-        <pre>     - <a href="/anplural/daoism/dao0.html/">Prologue</a></pre>
-        <pre>     - <a href="/anplural/daoism/dao1.html/">Chapter 1</a></pre>
+        <pre>     - <a href="/anplural/daoism/dao0.html">Prologue</a></pre>
+        <pre>     - <a href="/anplural/daoism/dao1.html">Chapter 1</a></pre>
     </header>
   
 </body>
