--- a/daoism/dao1.html
+++ b/daoism/dao1.html
@@ -10,29 +10,29 @@
     <header>
         <h1>Chapter 1</h1>
         <hr>
-        <p>The Dao that can be known is not the Eternalᵃ Dao;</p>
-        <p>The Name that can be named is not the Eternal Name. ¹</p>
-        <p>The nameless is the beginning of all;</p>
-        <p>The named is the mother of a thousand things. ²</p>
-        <p>Become desireless to see the mystery;</p>
-        <p>Become desiring to see its manifestations. ³</p>
-        <p>These are the same;</p>
-        <p>They differ only in name.</p>
-        <p>Their sameness is in darknessᵇ. ⁴</p>
-        <p>Darkness within darkness;</p>
-        <p>The threshold of understanding. ⁵</p>
+        <per>The Dao that can be known is not the Eternalᵃ Dao;
+        The Name that can be named is not the Eternal Name. ¹
+        The nameless is the beginning of all;
+        The named is the mother of a thousand things. ²
+        Become desireless to see the mystery;
+        Become desiring to see its manifestations. ³
+        These are the same;
+        They differ only in name.
+        Their sameness is in darknessᵇ. ⁴
+        Darkness within darkness;
+        The threshold of understanding. ⁵</per>
         <p></p>
-        <p>¹ to define is to limit, the Dao cannot be fully understood; the Dao is vast and subtle, it cannot be wholly known, only that Dao which moves one can be known by that one, and still to know is to not know; to attempt to describe the Dao is to miss what it is to experience the Dao</p>
-        <p>² before it is defined, it simply is; all that is is named in exclusion of what it isn't, it's all made distinct whether material or immaterial</p>
-        <p>³ to desire nothing is to revel in mystery, to desire things is to see what's defined; neither is good nor bad, but being able to release desire and enjoy the mystery makes experiencing the manifestations sweeter; to desire something here is to grasp at it, to not desire is to not be driven by grasping</p>
-        <p>⁴ neither desirelessness or desiringness are separate, they both arise from the same source; desirelessness and desiringness are ways to see the whole</p>
-        <p>⁵ understanding the sameness of these things, the vast unnamed and the small named, is key to understanding; words divide the whole, but the whole is still there; there is no separation from the Dao</p>
+        <per>¹ to define is to limit, the Dao cannot be fully understood; the Dao is vast and subtle, it cannot be wholly known, only that Dao which moves one can be known by that one, and still to know is to not know; to attempt to describe the Dao is to miss what it is to experience the Dao
+        ² before it is defined, it simply is; all that is is named in exclusion of what it isn't, it's all made distinct whether material or immaterial
+        ³ to desire nothing is to revel in mystery, to desire things is to see what's defined; neither is good nor bad, but being able to release desire and enjoy the mystery makes experiencing the manifestations sweeter; to desire something here is to grasp at it, to not desire is to not be driven by grasping
+        ⁴ neither desirelessness or desiringness are separate, they both arise from the same source; desirelessness and desiringness are ways to see the whole
+        ⁵ understanding the sameness of these things, the vast unnamed and the small named, is key to understanding; words divide the whole, but the whole is still there; there is no separation from the Dao</per>
         <p></p>
-        <p>ᵃ the word used is 常 (cháng) which means constant and enduring, not eternal in the theological sense</p>
-        <p>ᵇ the word used is 玄 (xuán) which has the deeper meanings of mystery, depth, obscure, and unfathomable; it is not "darkness" as in "hidden"; "darkness within darkness" is not "ignorance", it's mystery beyond perception; this provides some important context for understanding reality and the Dao</p>
+        <per>ᵃ the word used is 常 (cháng) which means constant and enduring, not eternal in the theological sense
+        ᵇ the word used is 玄 (xuán) which has the deeper meanings of mystery, depth, obscure, and unfathomable; it is not "darkness" as in "hidden"; "darkness within darkness" is not "ignorance", it's mystery beyond perception; this provides some important context for understanding reality and the Dao</per>
         <p></p>
-        <p>Comments</p>
-        <p>This needs the most time and effort put into understanding it, as the rest of the Dao De Jing sits upon this one chapter. We have to use the finite to understand the infinite, but we can't lose sight of the wholeness of that infinite. My pantheism helps me to understand this:</p>
+        <per>Comments
+        This needs the most time and effort put into understanding it, as the rest of the Dao De Jing sits upon this one chapter. We have to use the finite to understand the infinite, but we can't lose sight of the wholeness of that infinite. My pantheism helps me to understand this:</per>
         <p></p>
         <p>In pantheism, the whole and the part are one and the same, you can't have one without the other. We're all parts of the one whole divine, and even that divine must be part of a bigger whole. There is a distinction between a person and a rock, we define them as such from the foundations of language, long before words could be conceptualized. But both the person and the rock are the same in that they arise from the same source, the reality that underpins all things. Reality is much deeper than descriptions can capture. The vastness of reality is too vast for us to truly comprehend. That is the divine. The Dao is similarly a whole and a part, it is not fixed by such rigid labels. Distinctions are still made, they are very much real, but they are not the Eternal Dao. The Eternal Dao is the whole that cannot be fully comprehended. The Distinct Dao is what one experiences - it is not the Eternal Dao. This relational experiential aspect is what makes the Dao unlike the divine. But to be attached to the Distinct Dao is to limit oneself and not to flow with the Dao.</p>
         <p></p>
