--- a/daoism/dao1.html
+++ b/daoism/dao1.html
@@ -10,7 +10,7 @@
     <header>
         <h1>Chapter 1</h1>
         <hr>
-        <per>The Dao that can be known is not the Eternalᵃ Dao;
+        <per style="white-space: pre-line;">The Dao that can be known is not the Eternalᵃ Dao;
         The Name that can be named is not the Eternal Name. ¹
         The nameless is the beginning of all;
         The named is the mother of a thousand things. ²
