--- a/daoism/dao1.html
+++ b/daoism/dao1.html
@@ -42,7 +42,7 @@
         <p></p>
         <p>To define the Dao is to contain it, to contain it is to know it, and how can a speck of sand know the whole beach? It cannot! The speck simply knows that it is a speck, it knows that it is of the beach, it knows the beach is vast, it simply goes where the wind and the waves may take it; such is the way of the Dao. </p></p>
         <hr>
-        <p><a href="/anplural/daoism/index.html/">table of contents</a> | <a href="/anplural/daoism/dao0.html">last</a> | <a href="/anplural/daoism/index.html">next</a></p>
+        <p><a href="/anplural/daoism/index.html">table of contents</a> | <a href="/anplural/daoism/dao0.html">last</a> | <a href="/anplural/daoism/index.html">next</a></p>
     </header>
   
 </body>
