--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 <body>
     <header>
         <h1>AnPlural</h1>
-        <p>a repository for anarchist stuff <a href="/anplural/patches/" style="color:black; text-decoration:none;">patches</a> ; <a href="/anplural/daoism/" style="color:black; text-decoration:none;">daoism</a></p>
+        <per style="white-space: pre-line;">a repository for anarchist stuff <a href="/anplural/patches/" style="color:black; text-decoration:none;">patches</a>
+        check <a href="/anplural/daoism/">here</a> for some daoist meditations</per>
         <hr>
     </header>
 
