--- a/daoism/index.html
+++ b/daoism/index.html
@@ -10,6 +10,7 @@
     <header>
         <h1>Meditations of an Anarchist Daoist</h1>
         <p>just stuff about my readings of daoist textx and some poems and stuff</p>
+        <p><a href="/anplural/">home</a></p>
         <hr>
         <p>if you found this page, congrats! it's not ready!</p>
         <p>Dao De Jing</p>
