--- a/daoism/dao1.html
+++ b/daoism/dao1.html
@@ -9,6 +9,7 @@
 <body>
     <header>
         <h1>Chapter 1</h1>
+        <p><a href="/anplural/">home</a></p>
         <hr>
         <per style="white-space: pre-line;">The Dao that can be known is not the Eternalᵃ Dao;
         The Name that can be named is not the Eternal Name. ¹
