--- a/daoism/poem1.html
+++ b/daoism/poem1.html
@@ -20,7 +20,7 @@
           A fool believes he does. 
         </per>
         <hr>
-        <p><a href="/anplural/daoism/index.html">table of contents</a></p>
+        <p><a href="/anplural/daoism/index.html">table of contents</a> | <a href="/anplural/daoism/poem2.html">next</a></p>
     </header>
   
 </body>
