--- a/daoism/poem2.html
+++ b/daoism/poem2.html
@@ -26,7 +26,7 @@
           That is what I wonder
         </per>
         <hr>
-        <p><a href="/anplural/daoism/index.html">table of contents</a> | <a href="/anplural/daoism/poem1.html">last</a></p>
+        <p><a href="/anplural/daoism/index.html">table of contents</a> | <a href="/anplural/daoism/poem1.html">last</a> | <a href="/anplural/daoism/poem3.html">next</a></p>
     </header>
   
 </body>
