--- a/daoism/index.html
+++ b/daoism/index.html
@@ -12,7 +12,12 @@
         <p>just stuff about my readings of daoist textx and some poems and stuff</p>
         <p><a href="/anplural/">home</a></p>
         <hr>
-        <p>if you found this page, congrats! it's not ready!</p>
+        <p>Poetry</p>
+        <pre>     - <a href="/anplural/daoism/poem1.html">I.</a></pre>
+        <pre>     - <a href="/anplural/daoism/poem2.html">II.</a></pre>
+        <pre>     - <a href="/anplural/daoism/poem3.html">III.</a></pre>
+        <pre>     - <a href="/anplural/daoism/poem4.html">IV.</a></pre>
+        <pre>     - <a href="/anplural/daoism/poem5.html">V.</a></pre>
         <p>Dao De Jing</p>
         <pre>     - <a href="/anplural/daoism/dao0.html">Prologue</a></pre>
         <pre>     - <a href="/anplural/daoism/dao1.html">Chapter 1</a></pre>
