--- a/daoism/index.html
+++ b/daoism/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <h1>Meditations of an Anarchist Daoist</h1>
-        <p>just stuff about my readings of daoist textx and some poems and stuff</p>
+        <p>just stuff about my readings of daoist texts and some poems and stuff</p>
         <p><a href="/anplural/">home</a></p>
         <hr>
         <p>Poetry</p>
