--- a/daoism/index.html
+++ b/daoism/index.html
@@ -13,14 +13,14 @@
         <p><a href="/anplural/">home</a></p>
         <hr>
         <p>Poetry</p>
-        <pre style="white-space: pre-line;">     - <a href="/anplural/daoism/poem1.html">I.</a>
-             - <a href="/anplural/daoism/poem2.html">II.</a>
-             - <a href="/anplural/daoism/poem3.html">III.</a>
-             - <a href="/anplural/daoism/poem4.html">IV.</a>
-             - <a href="/anplural/daoism/poem5.html">V.</a></pre>
+        <pre>     - <a href="/anplural/daoism/poem1.html">I.</a></pre>
+        <pre>     - <a href="/anplural/daoism/poem2.html">II.</a></pre>
+        <pre>     - <a href="/anplural/daoism/poem3.html">III.</a></pre>
+        <pre>     - <a href="/anplural/daoism/poem4.html">IV.</a></pre>
+        <pre>     - <a href="/anplural/daoism/poem5.html">V.</a></pre>
         <p>Dao De Jing</p>
-        <pre style="white-space: pre-line;">     - <a href="/anplural/daoism/dao0.html">Prologue</a>
-             - <a href="/anplural/daoism/dao1.html">Chapter 1</a></pre>
+        <pre>     - <a href="/anplural/daoism/dao0.html">Prologue</a></pre>
+        <pre>     - <a href="/anplural/daoism/dao1.html">Chapter 1</a></pre>
     </header>
   
 </body>
