--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
             <h2>Zines</h2>
             <p>all formated for printing</p>
             <ul>
-                <li><a href="zines/They're Not the Problem.pdf" download>They're Not the Problem</a></li>
-                <li><a href="zines/maganazinm.pdf" download>The Maga Party, the Nazi Party, and the National Myth</a></li>
+                <li><a href="zines/They're Not the Problem.pdf" download>They're Not the Problem</a> a critique of the idea that illegal immigrants are the reason everything's gone to shit</li>
+                <li><a href="zines/maganazinm.pdf" download>The Maga Party, the Nazi Party, and the National Myth</a> talking about the fascist direction of the Trump administration and what upholds it</li>
             </ul>
         </section>
     </main>
