--- a/index.html
+++ b/index.html
@@ -32,7 +32,11 @@
             <img src="images/yourringcameraisaniceagent.png" alt="Your Ring Camera is an ICE Agent">
         </a><!--
         --><a href="images/leviathan.png" download>
-            <img src="images/leviathan.png" alt="Destroy the Panopticon, Beware the Eyes of Leviathan">
+            <img src="images/leviathan.png" alt="Destroy the Panopticon, Beware the Eyes of Leviathan"><!--
+        --><a href="images/redvblue.png" download>
+            <img src="images/redvblue.png" alt="It's not red vs blue, it's the state vs you"><!--
+        --><a href="images/fuckflock.png" download>
+            <img src="images/fuckflock.png" alt="Fuck FlockSafety">
         </a>
     </div>
 </section>
