--- a/daoism/index.html
+++ b/daoism/index.html
@@ -21,6 +21,7 @@
         <p>Dao De Jing</p>
         <pre>     - <a href="/anplural/daoism/dao0.html">Prologue</a></pre>
         <pre>     - <a href="/anplural/daoism/dao1.html">Chapter 1</a></pre>
+        <pre>     - <a href="/anplural/daoism/dao2.html">Chapter 2</a></pre>
     </header>
   
 </body>
