--- a/daoism/dao2.html
+++ b/daoism/dao2.html
@@ -11,7 +11,7 @@
         <h1>Chapter 2</h1>
         <p><a href="/anplural/">home</a></p>
         <hr>
-        <per style="white-space: pre-line;">     When beauty is seen,
+        <per style="white-space: pre-line;">     xWhen beauty is seen,
              It is seen because there is ugliness;
              When good is seen,
              It is seen because there is evil;¹</per>
