--- a/daoism/dao2.html
+++ b/daoism/dao2.html
@@ -11,19 +11,19 @@
         <h1>Chapter 2</h1>
         <p><a href="/anplural/">home</a></p>
         <hr>
-        <per style="white-space: pre-line;">When beauty is seen,
+        <per style="white-space: pre-line;" style="text-align: center;">When beauty is seen,
         It is seen because there is ugliness;
         When good is seen,
         It is seen because there is evil;¹</per>
         <p></p>
-        <per style="white-space: pre-line;">Something and nothing arise together;
+        <per style="white-space: pre-line;" style="text-align: center;">Something and nothing arise together;
         Difficult and easy complement each other;
         Long and short contrast each other;
         High and low complete each other; 
         Voice and soundᵃ harmonize each other;
         First and last follow each other;²</per>
         <p></p>
-        <per style="white-space: pre-line;">The sage acts without doing;
+        <per style="white-space: pre-line;" style="text-align: center;">The sage acts without doing;
         Teaches without talking;
         Much rises from his acts,
         Yet he claims none;
