--- a/daoism/dao2.html
+++ b/daoism/dao2.html
@@ -11,19 +11,19 @@
         <h1>Chapter 2</h1>
         <p><a href="/anplural/">home</a></p>
         <hr>
-        <per style="white-space: pre-line;" style="text-align: center;">When beauty is seen,
+        <per style="white-space: pre-line; text-align: center;">When beauty is seen,
         It is seen because there is ugliness;
         When good is seen,
         It is seen because there is evil;¹</per>
         <p></p>
-        <per style="white-space: pre-line;" style="text-align: center;">Something and nothing arise together;
+        <per style="white-space: pre-line; text-align: center;">Something and nothing arise together;
         Difficult and easy complement each other;
         Long and short contrast each other;
         High and low complete each other; 
         Voice and soundᵃ harmonize each other;
         First and last follow each other;²</per>
         <p></p>
-        <per style="white-space: pre-line;" style="text-align: center;">The sage acts without doing;
+        <per style="white-space: pre-line; text-align: center;">The sage acts without doing;
         Teaches without talking;
         Much rises from his acts,
         Yet he claims none;
@@ -31,7 +31,9 @@
         He works, yet does not ask thanks;⁴
         He succeeds, yet claims no merit;⁵
         This is why his success shall last foreverᵇ.⁶</per>
+        <p></p>
         <hr>
+        <p></p>
         <per style="white-space: pre-line;">¹ in reading this chapter, this opening was translated in two distinct ways; the general gist of both that I could figure out is that one cannot exist without the other; beauty is only beauty when contrasted with ugliness and vice versa; good is only good when contrasted with evil; this is meant to set up how the rest of this chapter is going to go
         ² everything in this section is about contrasts without placing one as better or worse than the other; a phrase in English is similar to this, "where there is light, there is shadow"; it's not a moral or value judgement, all of these are equal in importance and are relational to each other; none would make sense without the other
         ³ not that possession is inherently wrong, but that clinging to possession can hold you back when you need to let go; a sage knows when to let go and doesn't fret that he needs to
