--- a/daoism/dao1.html
+++ b/daoism/dao1.html
@@ -11,7 +11,7 @@
         <h1>Chapter 1</h1>
         <p><a href="/anplural/">home</a></p>
         <hr>
-        <per style="white-space: pre-line;" style="text-align: center;">The Dao that can be known is not the Eternalᵃ Dao;
+        <per style="white-space: pre-line; text-align: center;">The Dao that can be known is not the Eternalᵃ Dao;
         The Name that can be named is not the Eternal Name. ¹
         The nameless is the beginning of all;
         The named is the mother of a thousand things. ²
@@ -22,7 +22,9 @@
         Their sameness is in darknessᵇ. ⁴
         Darkness within darkness;
         The threshold of understanding. ⁵</per>
+        <p></p>
         <hr>
+        <p></p>
         <per style="white-space: pre-line;">¹ to define is to limit, the Dao cannot be fully understood; the Dao is vast and subtle, it cannot be wholly known, only that Dao which moves one can be known by that one, and still to know is to not know; to attempt to describe the Dao is to miss what it is to experience the Dao
         ² before it is defined, it simply is; all that is is named in exclusion of what it isn't, it's all made distinct whether material or immaterial
         ³ to desire nothing is to revel in mystery, to desire things is to see what's defined; neither is good nor bad, but being able to release desire and enjoy the mystery makes experiencing the manifestations sweeter; to desire something here is to grasp at it, to not desire is to not be driven by grasping
