--- a/daoism/dao1.html
+++ b/daoism/dao1.html
@@ -11,7 +11,7 @@
         <h1>Chapter 1</h1>
         <p><a href="/anplural/">home</a></p>
         <hr>
-        <per style="white-space: pre-line; text-align: center;">The Dao that can be known is not the Eternalᵃ Dao;
+        <p style="white-space: pre-line; text-align: center;">The Dao that can be known is not the Eternalᵃ Dao;
         The Name that can be named is not the Eternal Name. ¹
         The nameless is the beginning of all;
         The named is the mother of a thousand things. ²
@@ -21,7 +21,7 @@
         They differ only in name.
         Their sameness is in darknessᵇ. ⁴
         Darkness within darkness;
-        The threshold of understanding. ⁵</per>
+        The threshold of understanding. ⁵</p>
         <p></p>
         <hr>
         <p></p>
