--- a/daoism/dao1.html
+++ b/daoism/dao1.html
@@ -11,7 +11,7 @@
         <h1>Chapter 1</h1>
         <p><a href="/anplural/">home</a></p>
         <hr>
-        <div style="text-align: center; white-space: pre-line; border: 2px solid white; padding: 20px; margin: 20px auto;">The Dao that can be known
+        <div style="display: inline-block; text-align: center; white-space: pre-line; border: 2px solid white; padding: 20px; margin: 20px auto;">The Dao that can be known
         Is not the Eternalᵃ Dao;
         The Name that can be named
         Is not the Eternal Name.¹
