--- a/daoism/dao1.html
+++ b/daoism/dao1.html
@@ -11,19 +11,21 @@
         <h1>Chapter 1</h1>
         <p><a href="/anplural/">home</a></p>
         <hr>
-        <div style="display: inline-block; text-align: center; white-space: pre-line; border: 2px solid white; padding: 20px; margin: 20px auto;">The Dao that can be known
-        Is not the Eternalᵃ Dao;
-        The Name that can be named
-        Is not the Eternal Name.¹
-        The nameless is the beginning of all;
-        The named is the mother of a thousand things.²
-        Become desireless to see the mystery;
-        Become desiring to see its manifestations.³
-        These are the same;
-        They differ only in name.
-        Their sameness is in darknessᵇ.⁴
-        Darkness within darkness;
-        The threshold of understanding.⁵</div>
+        <div style="text-align: center;">
+            <div style="display: inline-block; text-align: center; white-space: pre-line; border: 2px solid white; padding: 20px; margin: 20px auto;">The Dao that can be known
+            Is not the Eternalᵃ Dao;
+            The Name that can be named
+            Is not the Eternal Name.¹
+            The nameless is the beginning of all;
+            The named is the mother of a thousand things.²
+            Become desireless to see the mystery;
+            Become desiring to see its manifestations.³
+            These are the same;
+            They differ only in name.
+            Their sameness is in darknessᵇ.⁴
+            Darkness within darkness;
+            The threshold of understanding.⁵</div>
+        </div>
         <p></p>
         <hr>
         <p></p>
