--- a/daoism/dao2.html
+++ b/daoism/dao2.html
@@ -11,26 +11,30 @@
         <h1>Chapter 2</h1>
         <p><a href="/anplural/">home</a></p>
         <hr>
-        <per style="white-space: pre-line; text-align: center;">When beauty is seen,
-        It is seen because there is ugliness;
-        When good is seen,
-        It is seen because there is evil;¹</per>
-        <p></p>
-        <per style="white-space: pre-line; text-align: center;">Something and nothing arise together;
-        Difficult and easy complement each other;
-        Long and short contrast each other;
-        High and low complete each other; 
-        Voice and soundᵃ harmonize each other;
-        First and last follow each other;²</per>
-        <p></p>
-        <per style="white-space: pre-line; text-align: center;">The sage acts without doing;
-        Teaches without talking;
-        Much rises from his acts,
-        Yet he claims none;
-        He creates, yet claims no possession;³
-        He works, yet does not ask thanks;⁴
-        He succeeds, yet claims no merit;⁵
-        This is why his success shall last foreverᵇ.⁶</per>
+        <div style="text-align: center;">
+            <div style="display: inline-block; text-align: center; white-space: pre-line; border: 2px solid white; padding: 20px; margin: 20px auto;">
+                <per style="white-space: pre-line; text-align: center;">When beauty is seen,
+                It is seen because there is ugliness;
+                When good is seen,
+                It is seen because there is evil;¹</per>
+                <p></p>
+                <per style="white-space: pre-line; text-align: center;">Something and nothing arise together;
+                Difficult and easy complement each other;
+                Long and short contrast each other;
+                High and low complete each other; 
+                Voice and soundᵃ harmonize each other;
+                First and last follow each other;²</per>
+                <p></p>
+                <per style="white-space: pre-line; text-align: center;">The sage acts without doing;
+                Teaches without talking;
+                Much rises from his acts,
+                Yet he claims none;
+                He creates, yet claims no possession;³
+                He works, yet does not ask thanks;⁴
+                He succeeds, yet claims no merit;⁵
+                This is why his success shall last foreverᵇ.⁶</per>
+            </div>
+        </div>
         <p></p>
         <hr>
         <p></p>
