--- a/daoism/index.html
+++ b/daoism/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AnPlural - Meditations of an Anarchist Daoist</title>
+    <title>AnPlural - Anarchic Meditations</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -22,6 +22,7 @@
         <pre>     - <a href="/anplural/daoism/dao0.html">Prologue</a></pre>
         <pre>     - <a href="/anplural/daoism/dao1.html">Chapter 1</a></pre>
         <pre>     - <a href="/anplural/daoism/dao2.html">Chapter 2</a></pre>
+        <pre>     - <a href="/anplural/daoism/dao3.html">Chapter 3</a></pre>
     </header>
   
 </body>
