--- a/daoism/dao3.html
+++ b/daoism/dao3.html
@@ -48,7 +48,7 @@
         ᵉ in classical Chinese, the term 其 (qi) can be referring inwardly to the sage or outwardly to those the sage would lead; my decision to translate the first part of the section as "his" and the last one to "theirs" is that the conditions for order begin inward, not outward; a sage cannot hope to unburden others of that which he is burdened</per>
         <p></p>
         <per style="white-space: pre-line;">Comments
-        Overall, this chapter is rather straightforward: don't be a braggart, it doesn't help anyone and can cause more harm than not.</p>
+        Overall, this chapter is rather straightforward: don't be a braggart, it doesn't help anyone and can cause more harm than not. Constructing social fields centered around comparison creates unnecessary tension.</p>
         <hr>
         <p><a href="/anplural/daoism/index.html">table of contents</a> | <a href="/anplural/daoism/dao2.html">last</a> | <a href="/anplural/daoism/index.html">next</a></p>
     </header>
