--- a/daoism/dao3.html
+++ b/daoism/dao3.html
@@ -51,7 +51,7 @@
         <per style="white-space: pre-line;">Comments
         Overall, this chapter is rather straightforward: don't be a braggart, it doesn't help anyone and can cause more harm than not. Constructing social fields centered around comparison creates unnecessary tension.</p>
         <hr>
-        <p><a href="/anplural/daoism/index.html">table of contents</a> | <a href="/anplural/daoism/dao2.html">last</a> | <a href="/anplural/daoism/index.html">next</a></p>
+        <p><a href="/anplural/daoism/index.html">table of contents</a> | <a href="/anplural/daoism/dao2.html">last</a> | <a href="/anplural/daoism/dao4.html">next</a></p>
     </header>
   
 </body>
