--- a/daoism/index.html
+++ b/daoism/index.html
@@ -23,6 +23,7 @@
         <pre>     - <a href="/anplural/daoism/dao1.html">Chapter 1</a></pre>
         <pre>     - <a href="/anplural/daoism/dao2.html">Chapter 2</a></pre>
         <pre>     - <a href="/anplural/daoism/dao3.html">Chapter 3</a></pre>
+        <pre>     - <a href="/anplural/daoism/dao4.html">Chapter 4</a></pre>
     </header>
   
 </body>
